--- a/package.json
+++ b/package.json
@@ -4,28 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --open --mode development",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "babel-loader": "^9.2.1",
-    "css-loader": "^7.1.2",
-    "filemanager-webpack-plugin": "^8.0.0",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
-    "postcss-loader": "^8.1.1",
-    "postcss-preset-env": "^10.1.3",
-    "sass": "^1.83.1",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "sass": "^1.69.0",
     "sass-loader": "^16.0.4",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.96.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
